--- a/cuImage/GeneralPreferencesViewController.xib
+++ b/cuImage/GeneralPreferencesViewController.xib
@@ -7,56 +7,135 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GeneralPreferencesViewController" customModule="cuImage" customModuleProvider="target">
             <connections>
-                <outlet property="keepWindowsOnTopButton" destination="2PE-0Y-HbB" id="NTX-VV-A3R"/>
-                <outlet property="launchAtLoginButton" destination="TBY-dC-2CI" id="AcN-qr-0t3"/>
+                <outlet property="notificationPreferencesButton" destination="KdG-Rx-LZi" id="0hD-xj-eDU"/>
                 <outlet property="view" destination="UqQ-L8-ZeT" id="BAy-vF-E7J"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="UqQ-L8-ZeT">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="76"/>
+            <rect key="frame" x="0.0" y="0.0" width="500" height="193"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="TBY-dC-2CI" userLabel="Launch At Login">
-                    <rect key="frame" x="18" y="40" width="115" height="18"/>
+                    <rect key="frame" x="107" y="155" width="203" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="14" id="d4s-GZ-NfW"/>
-                        <constraint firstAttribute="width" constant="111" id="ssa-M3-tyW"/>
+                        <constraint firstAttribute="height" constant="14" id="cfY-BW-Pw8"/>
                     </constraints>
-                    <buttonCell key="cell" type="check" title="Launch at login" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Kos-qa-NH8" userLabel="Launch At Login">
+                    <buttonCell key="cell" type="check" title="Launch cuImage at login" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Kos-qa-NH8" userLabel="Launch At Login">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <binding destination="jgw-3M-z5z" name="value" keyPath="values.launchAtLogin" id="My0-Ed-jpA"/>
+                        <binding destination="jgw-3M-z5z" name="value" keyPath="values.LaunchAtLogin" id="lz6-0l-HUa"/>
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="2PE-0Y-HbB" userLabel="Keep Windows Always On Top">
-                    <rect key="frame" x="18" y="18" width="195" height="18"/>
+                    <rect key="frame" x="107" y="133" width="195" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="191" id="C3d-Wm-Ko8"/>
-                        <constraint firstAttribute="height" constant="14" id="Mn2-Gr-jvG"/>
+                        <constraint firstAttribute="height" constant="14" id="coi-Pn-Lf2"/>
                     </constraints>
                     <buttonCell key="cell" type="check" title="Keep windows always on top" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="ddc-7V-Wgv" userLabel="Keep Windows Always On Top">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <binding destination="jgw-3M-z5z" name="value" keyPath="values.keepWindowsOnTop" id="U5G-fN-QnZ"/>
+                        <binding destination="jgw-3M-z5z" name="value" keyPath="values.KeepWindowsOnTop" id="0R6-fC-CfH"/>
                     </connections>
                 </button>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="72M-YJ-QrW">
+                    <rect key="frame" x="107" y="99" width="207" height="18"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="14" id="rJe-dv-iHQ"/>
+                    </constraints>
+                    <buttonCell key="cell" type="check" title="Use Markdown-style URL" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="hBu-Pl-8bf">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <binding destination="jgw-3M-z5z" name="value" keyPath="values.UseMarkdownStyleURL" id="xrb-mx-IGg"/>
+                    </connections>
+                </button>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="BcR-si-wtr">
+                    <rect key="frame" x="107" y="77" width="262" height="18"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="14" id="tnY-4K-frq"/>
+                    </constraints>
+                    <buttonCell key="cell" type="check" title="Automatically copy URL when uploaded" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="2BY-sC-PqD">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <binding destination="jgw-3M-z5z" name="value" keyPath="values.CopyURLWhenUploaded" id="cCp-t9-8zx"/>
+                    </connections>
+                </button>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGD-TB-aVV">
+                    <rect key="frame" x="27" y="156" width="76" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Application:" id="oyf-rG-l1O">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y86-06-CwQ">
+                    <rect key="frame" x="69" y="99" width="34" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="URL:" id="TB5-Kl-Qnw">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FzQ-EO-adz">
+                    <rect key="frame" x="18" y="40" width="85" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Notifications:" id="UzJ-aw-rqW">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KdG-Rx-LZi">
+                    <rect key="frame" x="103" y="31" width="197" height="32"/>
+                    <buttonCell key="cell" type="push" title="Notification Preferences…" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Hwg-fa-Wt8">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="handleTappedButton:" target="-2" id="mVj-Ww-GIN"/>
+                    </connections>
+                </button>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PnD-in-ejI">
+                    <rect key="frame" x="107" y="18" width="372" height="14"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Notification preferences are shown in the macOS System Preferences." id="TX6-pu-fEP">
+                        <font key="font" metaFont="system" size="11"/>
+                        <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="2PE-0Y-HbB" secondAttribute="bottom" constant="20" id="4O0-pb-OEn"/>
-                <constraint firstItem="2PE-0Y-HbB" firstAttribute="top" secondItem="TBY-dC-2CI" secondAttribute="bottom" constant="8" id="N6A-1K-Q37"/>
-                <constraint firstItem="2PE-0Y-HbB" firstAttribute="leading" secondItem="UqQ-L8-ZeT" secondAttribute="leading" constant="20" id="Zwl-2z-k9n"/>
-                <constraint firstAttribute="trailing" secondItem="2PE-0Y-HbB" secondAttribute="trailing" constant="289" id="aww-dW-XSa"/>
-                <constraint firstAttribute="trailing" secondItem="TBY-dC-2CI" secondAttribute="trailing" constant="369" id="bn2-SZ-hN4"/>
-                <constraint firstItem="TBY-dC-2CI" firstAttribute="top" secondItem="UqQ-L8-ZeT" secondAttribute="top" constant="20" id="yCa-F6-c1g"/>
-                <constraint firstItem="TBY-dC-2CI" firstAttribute="leading" secondItem="UqQ-L8-ZeT" secondAttribute="leading" constant="20" id="zJw-zu-8jO"/>
+                <constraint firstItem="TBY-dC-2CI" firstAttribute="centerY" secondItem="KGD-TB-aVV" secondAttribute="centerY" id="1OA-yW-Ksj"/>
+                <constraint firstAttribute="trailing" secondItem="TBY-dC-2CI" secondAttribute="trailing" constant="192" id="1YG-uk-qze"/>
+                <constraint firstItem="PnD-in-ejI" firstAttribute="leading" secondItem="KdG-Rx-LZi" secondAttribute="leading" id="1dN-82-zYC"/>
+                <constraint firstItem="72M-YJ-QrW" firstAttribute="top" secondItem="2PE-0Y-HbB" secondAttribute="bottom" constant="20" id="AY5-WX-EZY"/>
+                <constraint firstItem="KdG-Rx-LZi" firstAttribute="top" secondItem="BcR-si-wtr" secondAttribute="bottom" constant="20" id="C1N-7x-MHx"/>
+                <constraint firstItem="72M-YJ-QrW" firstAttribute="leading" secondItem="2PE-0Y-HbB" secondAttribute="leading" id="FMi-kb-iWg"/>
+                <constraint firstItem="2PE-0Y-HbB" firstAttribute="top" secondItem="TBY-dC-2CI" secondAttribute="bottom" constant="8" id="ICO-2U-PVl"/>
+                <constraint firstItem="TBY-dC-2CI" firstAttribute="top" secondItem="UqQ-L8-ZeT" secondAttribute="top" constant="22" id="ILi-I3-I4v"/>
+                <constraint firstItem="KdG-Rx-LZi" firstAttribute="centerY" secondItem="FzQ-EO-adz" secondAttribute="centerY" id="JZG-d3-j0y"/>
+                <constraint firstItem="2PE-0Y-HbB" firstAttribute="leading" secondItem="TBY-dC-2CI" secondAttribute="leading" id="OqF-Ap-QHK"/>
+                <constraint firstItem="KdG-Rx-LZi" firstAttribute="leading" secondItem="BcR-si-wtr" secondAttribute="leading" id="P6x-j4-WmY"/>
+                <constraint firstAttribute="trailing" secondItem="KdG-Rx-LZi" secondAttribute="trailing" constant="206" id="QqS-Ak-v9o"/>
+                <constraint firstItem="PnD-in-ejI" firstAttribute="top" secondItem="KdG-Rx-LZi" secondAttribute="bottom" constant="6" id="UyR-kT-EtZ"/>
+                <constraint firstItem="72M-YJ-QrW" firstAttribute="centerY" secondItem="Y86-06-CwQ" secondAttribute="centerY" id="Vxe-QX-1k0"/>
+                <constraint firstItem="BcR-si-wtr" firstAttribute="top" secondItem="72M-YJ-QrW" secondAttribute="bottom" constant="8" id="XEc-C4-CZJ"/>
+                <constraint firstAttribute="bottom" secondItem="PnD-in-ejI" secondAttribute="bottom" constant="18" id="YNm-Oo-yAQ"/>
+                <constraint firstItem="BcR-si-wtr" firstAttribute="leading" secondItem="72M-YJ-QrW" secondAttribute="leading" id="e79-7F-67b"/>
+                <constraint firstItem="TBY-dC-2CI" firstAttribute="leading" secondItem="KGD-TB-aVV" secondAttribute="trailing" constant="8" id="gmB-ii-0mc"/>
+                <constraint firstAttribute="trailing" secondItem="72M-YJ-QrW" secondAttribute="trailing" constant="188" id="oKX-3d-bMA"/>
+                <constraint firstItem="KdG-Rx-LZi" firstAttribute="leading" secondItem="FzQ-EO-adz" secondAttribute="trailing" constant="8" id="reK-eX-V9N"/>
+                <constraint firstItem="72M-YJ-QrW" firstAttribute="leading" secondItem="Y86-06-CwQ" secondAttribute="trailing" constant="8" id="wVI-Dg-EOA"/>
             </constraints>
-            <point key="canvasLocation" x="108" y="361"/>
+            <point key="canvasLocation" x="108" y="422"/>
         </customView>
         <userDefaultsController representsSharedInstance="YES" id="jgw-3M-z5z"/>
     </objects>
