--- a/cuImage/HostsPreferencesPaneController.xib
+++ b/cuImage/HostsPreferencesPaneController.xib
@@ -74,6 +74,8 @@ DQ
                                 <buttonCell key="cell" type="push" title="Validate" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="RL5-pB-8JI">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
+                                    <string key="keyEquivalent">d</string>
+                                    <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                 </buttonCell>
                                 <connections>
                                     <action selector="handleTappedButton:" target="-2" id="G2h-fQ-bCz"/>
