--- a/cuImage/PreferencesWindowController.xib
+++ b/cuImage/PreferencesWindowController.xib
@@ -24,7 +24,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                 <autoresizingMask key="autoresizingMask"/>
             </view>
-            <toolbar key="toolbar" implicitIdentifier="885C934F-4A10-440C-B29F-BF787E04D3CF" autosavesConfiguration="NO" displayMode="iconAndLabel" sizeMode="regular" id="itw-4w-zLM">
+            <toolbar key="toolbar" implicitIdentifier="885C934F-4A10-440C-B29F-BF787E04D3CF" autosavesConfiguration="NO" allowsUserCustomization="NO" displayMode="iconAndLabel" sizeMode="regular" id="itw-4w-zLM">
                 <allowedToolbarItems>
                     <toolbarItem implicitItemIdentifier="A48C7778-9B2E-4E55-8B1F-A4F03BE4E538" label="General" paletteLabel="General" image="GeneralPreferences" selectable="YES" id="bua-bb-1FB">
                         <connections>
