--- a/cuImage/AboutWindowController.xib
+++ b/cuImage/AboutWindowController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,6 +11,7 @@
                 <outlet property="applicationNameTextField" destination="b82-gQ-gwk" id="I2j-uJ-Z3T"/>
                 <outlet property="copyrightLabel" destination="tcH-mh-mde" id="gFW-WY-S5b"/>
                 <outlet property="copyrightTextField" destination="tcH-mh-mde" id="Jki-kK-MDl"/>
+                <outlet property="extraInformationTextField" destination="0QJ-il-pNH" id="fc7-6h-yx9"/>
                 <outlet property="versionLabel" destination="4Ja-dO-bso" id="Ij1-pe-6uf"/>
                 <outlet property="versionTextField" destination="4Ja-dO-bso" id="yHv-Yj-srM"/>
                 <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
@@ -20,14 +21,14 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="About" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
-            <rect key="contentRect" x="196" y="240" width="314" height="213"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
+            <rect key="contentRect" x="196" y="240" width="314" height="368"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
             <view key="contentView" wantsLayer="YES" id="se5-gp-TjO">
-                <rect key="frame" x="0.0" y="0.0" width="314" height="213"/>
+                <rect key="frame" x="0.0" y="0.0" width="314" height="368"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dkF-ON-iYW">
-                        <rect key="frame" x="125" y="129" width="64" height="64"/>
+                        <rect key="frame" x="125" y="284" width="64" height="64"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="64" id="FaD-O3-ddM"/>
                             <constraint firstAttribute="width" constant="64" id="tP1-xB-AMg"/>
@@ -35,7 +36,7 @@
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSApplicationIcon" id="6Lw-4P-gNr"/>
                     </imageView>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Ja-dO-bso">
-                        <rect key="frame" x="87" y="56" width="140" height="16"/>
+                        <rect key="frame" x="87" y="211" width="140" height="16"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Version 1.2.3 (Build 123)" id="gfO-PH-oqJ">
                             <font key="font" metaFont="cellTitle"/>
                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -43,7 +44,7 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b82-gQ-gwk">
-                        <rect key="frame" x="109" y="80" width="97" height="29"/>
+                        <rect key="frame" x="109" y="235" width="97" height="29"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="cuImage" id="phg-vz-Gmt">
                             <font key="font" size="24" name="HelveticaNeue"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -58,23 +59,52 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
+                    <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uJb-Kr-R10">
+                        <rect key="frame" x="0.0" y="44" width="314" height="159"/>
+                        <clipView key="contentView" id="LfW-32-Ylw">
+                            <rect key="frame" x="1" y="1" width="312" height="157"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <subviews>
+                                <textView importsGraphics="NO" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="0QJ-il-pNH">
+                                    <rect key="frame" x="0.0" y="0.0" width="312" height="157"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <size key="minSize" width="312" height="157"/>
+                                    <size key="maxSize" width="463" height="10000000"/>
+                                    <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                </textView>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </clipView>
+                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="VKy-WX-Oz1">
+                            <rect key="frame" x="-100" y="-100" width="87" height="18"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="X1s-DQ-nWe">
+                            <rect key="frame" x="297" y="1" width="16" height="157"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                    </scrollView>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="uJb-Kr-R10" secondAttribute="trailing" id="62b-jA-qtb"/>
                     <constraint firstItem="dkF-ON-iYW" firstAttribute="centerX" secondItem="se5-gp-TjO" secondAttribute="centerX" id="Lr7-1c-TX8"/>
                     <constraint firstItem="b82-gQ-gwk" firstAttribute="top" secondItem="dkF-ON-iYW" secondAttribute="bottom" constant="20" id="Msv-9U-hFR"/>
-                    <constraint firstItem="tcH-mh-mde" firstAttribute="top" secondItem="4Ja-dO-bso" secondAttribute="bottom" constant="20" id="XDD-bt-X6R"/>
+                    <constraint firstItem="uJb-Kr-R10" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" id="U4J-mL-1gH"/>
                     <constraint firstItem="b82-gQ-gwk" firstAttribute="centerX" secondItem="se5-gp-TjO" secondAttribute="centerX" id="cTF-IG-A3v"/>
                     <constraint firstItem="tcH-mh-mde" firstAttribute="centerX" secondItem="se5-gp-TjO" secondAttribute="centerX" id="eME-Vb-IwE"/>
                     <constraint firstItem="dkF-ON-iYW" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="20" id="eWc-YV-2Xu"/>
+                    <constraint firstItem="uJb-Kr-R10" firstAttribute="top" secondItem="4Ja-dO-bso" secondAttribute="bottom" constant="8" id="fRK-82-tgA"/>
                     <constraint firstItem="4Ja-dO-bso" firstAttribute="centerX" secondItem="se5-gp-TjO" secondAttribute="centerX" id="k0p-Zm-VKe"/>
                     <constraint firstAttribute="bottom" secondItem="tcH-mh-mde" secondAttribute="bottom" constant="20" id="kz0-9i-jLT"/>
+                    <constraint firstItem="tcH-mh-mde" firstAttribute="top" secondItem="uJb-Kr-R10" secondAttribute="bottom" constant="8" id="lNo-7n-ohq"/>
                     <constraint firstItem="4Ja-dO-bso" firstAttribute="top" secondItem="b82-gQ-gwk" secondAttribute="bottom" constant="8" id="uY3-tM-hRv"/>
                 </constraints>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
             </connections>
-            <point key="canvasLocation" x="49" y="128"/>
+            <point key="canvasLocation" x="49" y="205"/>
         </window>
     </objects>
     <resources>
