--- a/cuImage/Base.lproj/QiniuHostInfoViewController.xib
+++ b/cuImage/Base.lproj/QiniuHostInfoViewController.xib
@@ -94,7 +94,7 @@
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3EX-gA-Obf">
                     <rect key="frame" x="99" y="20" width="298" height="14"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Tip: The domain should begin with &quot;https://&quot; or &quot;http://&quot;." id="1em-c9-YCx">
-                        <font key="font" metaFont="system" size="11"/>
+                        <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
