Localize 'Services' menu string

--- a/cuImage/Base.lproj/GeneralPreferencesPaneController.xib
+++ b/cuImage/Base.lproj/GeneralPreferencesPaneController.xib
@@ -146,8 +146,8 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SLW-6U-XrC">
-                    <rect key="frame" x="108" y="79" width="337" height="14"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Note: The JPEG compression doesn't support compressing GIF." id="t1F-Ck-qHC">
+                    <rect key="frame" x="108" y="79" width="161" height="14"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Not support compressing GIF." id="t1F-Ck-qHC">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
